style.css
/* ... */
#page5-container {
    width: 100vw;
    height: 100vh;
    position: absolute;
    top: 38%;
    left: 50%;
    transform: translate(-50%, -50%);
    display: flex;
    align-items: center;
    justify-content: space-between;
    overflow: hidden;
    border-bottom: 3px solid black;
}

#img-container-1 {
    width: 33.33vw;
    height: 100vh;
    background-color: #BFFF0A;
    display: flex;
    align-items: center;
    justify-content: center;
    overflow: hidden;
}

#img-container-1 img {
    width: 25vw;
    height: 45vh;
}

#img-container-2 {
    width: 33.33vw;
    height: 100vh;
    background-color: #5546FF;
    display: flex;
    align-items: center;
    justify-content: center;
    overflow: hidden;
}

#img-container-2 img {
    width: 25vw;
    height: 45vh;
}

#img-container-3 {
    width: 33.33vw;
    height: 100vh;
    background-color: #FF7BCA;
    display: flex;
    align-items: center;
    justify-content: center;
    overflow: hidden;
}

#img-container-3 img {
    width: 25vw;
    height: 40vh;
}

#page5-section-2 {
    position: relative;
    top: 80%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: #FF7BCA;
    width: 100vw;
    height: 110vh;
    overflow: hidden;
}

#section2-heading-1 {
    color: #000000;
    position: absolute;
    top: 15%;
    left: 2%;
    transform: translateY(-50%);
    font-size: 10vw;
    font-family: myFont;
    text-transform: uppercase;
    pointer-events: none;
}

#section2-heading-2 {
    color: #000000;
    position: absolute;
    top: 15%;
    right: 2%;
    transform: translateY(-50%);
    font-size: 1vw;
    font-family: myFont-2;
    text-transform: uppercase;
    pointer-events: none;
}

#section2-heading-3 {
    color: #000000;
    position: absolute;
    top: 17%;
    right: 2%;
    transform: translateY(-50%);
    font-size: 1vw;
    font-family: myFont-2;
    pointer-events: none;
}

#headings-container {
    width: 100vw;
    height: 70vh;
    display: flex;
    align-items: flex-start;
    justify-content: flex-start;
    flex-direction: column;
    position: relative;
    top: 55%;
    left: 50%;
    transform: translate(-50%, -50%);
    overflow: hidden;
}

#container-heading-1 {
    display: flex;
    align-items: center;
    justify-content: space-between;
    position: absolute;
    top: 18%;
    left: 0%;
    transform: translateY(-50%);
    font-family: myFont;
    font-size: 5vw;
    width: 100%;
    border-bottom: 3px solid black;
    text-transform: uppercase;
    transition: all ease 0.5s;
}

#container-heading-1 p {
    margin-left: 2vw;
    transition: all ease 0.5s;
}

#container-heading-1 i {
    font-size: 4vw;
    margin-right: 2vw;
    transition: all ease 0.5s;
}

#container-heading-2 {
    display: flex;
    align-items: center;
    justify-content: space-between;
    position: absolute;
    top: 38%;
    left: 0%;
    transform: translateY(-50%);
    font-family: myFont;
    font-size: 5vw;
    width: 100%;
    border-bottom: 3px solid black;
    text-transform: uppercase;
}

#container-heading-2 p {
    margin-left: 2vw;
    transition: all ease 0.5s;
}

#container-heading-2 i {
    font-size: 4vw;
    margin-right: 2vw;
    transition: all ease 0.5s;
}

#container-heading-3 {
    display: flex;
    align-items: center;
    justify-content: space-between;
    position: absolute;
    top: 58%;
    left: 0%;
    transform: translateY(-50%);
    font-family: myFont;
    font-size: 5vw;
    width: 100%;
    border-bottom: 3px solid black;
    text-transform: uppercase;
}

#container-heading-3 p {
    margin-left: 2vw;
    transition: all ease 0.5s;
}

#container-heading-3 i {
    font-size: 4vw;
    margin-right: 2vw;
    transition: all ease 0.5s;
}

#container-heading-4 {
    display: flex;
    align-items: center;
    justify-content: space-between;
    position: absolute;
    top: 79%;
    left: 0%;
    transform: translateY(-50%);
    font-family: myFont;
    font-size: 5vw;
    width: 100%;
    border-bottom: 3px solid black;
    text-transform: uppercase;
}

#container-heading-4 p {
    margin-left: 2vw;
    transition: all ease 0.5s;
}

#container-heading-4 i {
    font-size: 4vw;
    margin-right: 2vw;
    transition: all ease 0.5s;
}

#container-heading-1:hover p {
    margin-left: 3.2vw;
}

#container-heading-1:hover i {
    rotate: 360deg;
}

#container-heading-2:hover p {
    margin-left: 3.2vw;
}

#container-heading-2:hover i {
    rotate: 360deg;
}

#container-heading-3:hover p {
    margin-left: 3.2vw;
}

#container-heading-3:hover i {
    rotate: 360deg;
}

#container-heading-4:hover p {
    margin-left: 3.2vw;
}

#container-heading-4:hover i {
    rotate: 360deg;
}

#page5-wave-box {
    position: absolute;
    top: 100%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 100%;
    height: 22vh;
    display: flex;
    align-items: center;
    justify-content: space-between;
    overflow: hidden;
}

#page5-wave-box div {
    width: 200px;
    height: 200px;
    background-color: black;
    border-radius: 50%;
}

#page6-heading-1 {
    color: white;
    position: absolute;
    top: 20%;
    left: 50%;
    transform: translate(-50%, -50%);
    font-size: 20vw;
    font-family: myFont;
    text-transform: uppercase;
    white-space: nowrap;
    pointer-events: none;
}

#page6-img {
    position: absolute;
    top: 56.3%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 80vw;
    height: 210vh;
    overflow: hidden;
}

#page6-img img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

#page6-rotating-svg {
    position: absolute;
    top: 82%;
    left: 83%;
    transform: translate(-50%, -50%);
    display: flex;
    align-items: center;
    justify-content: center;
}

#svg-heading-3 {
    color: #000000;
    font-size: 4vw;
    font-family: myFont;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    pointer-events: none;
}
/* ... */

